--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="challengecss.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="resp.css">
     <title class="titulo">Challenge Alura - Encriptador</title>
 </head>
@@ -35,7 +35,7 @@
         </section>
     </main>
         
-      <script src="challengescript.js"></script>
+      <script src="script.js"></script>
 
       <footer class="img-rodape" >
         <p id="autor">©2022 Ricardo Ferreira</p>
